--- a/IntelektikaJava/nbproject/project.properties
+++ b/IntelektikaJava/nbproject/project.properties
@@ -31,7 +31,9 @@ file.reference.sqljdbc42.jar=..\\sqljdbc_6.0\\enu\\jre8\\sqljdbc42.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
