--- a/IntelektikaJava/nbproject/project.properties
+++ b/IntelektikaJava/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=IntelektikaJava
+application.vendor=Wegis
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,7 +27,9 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/IntelektikaJava.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.IntelektikaJava-slamstas=../slamstas
 file.reference.sqljdbc42.jar=..\\sqljdbc_6.0\\enu\\jre8\\sqljdbc42.jar
 includes=**
 jar.compress=false
@@ -73,4 +76,5 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
+src.slamstas.dir=${file.reference.IntelektikaJava-slamstas}
 test.src.dir=test
