--- a/IntelektikaJava/nbproject/project.properties
+++ b/IntelektikaJava/nbproject/project.properties
@@ -29,14 +29,15 @@ dist.jar=${dist.dir}/IntelektikaJava.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Program Files\\NetBeans 8.2\\java\\modules\\ext\\AbsoluteLayout.jar
 file.reference.IntelektikaJava-slamstas=../slamstas
 file.reference.sqljdbc42.jar=..\\sqljdbc_6.0\\enu\\jre8\\sqljdbc42.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc42.jar}:\
-    ${libs.absolutelayout.classpath}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
